# pods-poc

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
config/: app_settings.yaml
containers/collector/: Dockerfile
containers/storage/: Dockerfile
containers/trend/: Dockerfile
containers/web/: Dockerfile  index.html  nginx.conf
docs/: arch.md
examples/systemd/: pods-poc-collector.service  pods-poc-initial-pull.service  pods-poc-monitor.service  pods-poc-notify.sh  pods-poc-notify@.service  pods-poc-storage-push.service  pods-poc-storage.service  pods-poc-trend.service
pod/: pod.yaml
services/collector/: __init__.py  collector.py
services/db_manager/: __init__.py  backup-once.sh  backup.py  db_manager.py  entrypoint.sh  pull-db.sh  push-db.sh
services/trend/: __init__.py  trend.py
services/web/: __init__.py  server.py
services/web/templates/: index.html
src/db_manager/: backup.py
src/web/: server.py
src/web/templates/: index.html
systemd/: install-units.sh  pods-poc-monitor.service  pods-poc-monitor.sh  pods-poc-monitor.timer  pods-poc-notify.sh  pods-poc-notify@.service  pods-poc-storage-push.timer  pods-poc-web.service
